# cgvis-trabalho-final

./: .gitignore  CMakeLists.txt  FONTES.md  PROMPTS.md  README.md  README.org  SPEC.md  demoCGV.md  output.txt  pos.txt  temp
assets/models/: rubber-duck.mtl
assets/models/birch/: birch.mtl
assets/models/bird/: 0V3HJRW3DQ5QPF3J2O5PR4Z1M.mtl
assets/models/bird2/: 1MWMHT4M2D4LN4H7TAH9H6HH5.mtl
assets/models/bird_standing/: G1FXKUZIFSQHX0QERXO6AAO63.mtl
assets/models/bush/: bush.mtl
assets/models/butterfly/: butterfly.mtl
assets/models/buxus/: buxus.mtl
assets/models/carp/: carp.mtl
assets/models/flying_bird/: flying_bird.mtl
assets/models/house/: house.mtl
assets/models/low_poly_duck/: low_poly_duck.mtl
assets/models/low_poly_shrub/: low_poly_shrub.mtl
assets/models/mailbox/: mailbox.mtl
assets/models/margarita_flower_bush/: margarita_flower_bush.mtl
assets/models/marine_plant/: marine_plant.mtl
assets/models/papaver/: papaver.mtl
assets/models/pine_low_poly/: pine_low_poly.mtl
assets/models/rocks/: CaveCrystal01.mtl  ROCK_4.mtl  ROCK_7.mtl  huge_rock.mtl
assets/models/styled bush/: styled_bush.mtl
assets/models/tree/: Birch_Summer_1.mtl
assets/models/tree_oak/: tree_oak.mtl
assets/shaders/: particle_vertex.glsl  particles_fragment.glsl  particles_vertex.glsl  shader_fragment.glsl  shader_vertex.glsl
assets/textures/: failaid_to_push_file.txt
docs/: [docs] aplicação principal.org  [docs] assets, texturas, modelos e objetos.org  [docs] callbacks para window e input.org  [docs] carregadores.org  [docs] main.org  [docs] terreno, relevo e céu.org  [how-to] como adicionar novos assets (modelos, texturas) ao jogo.org  [how-to] objetivo do jogo e como jogar.org  [internal] compilando.org  [internal] files.txt  [report] funções proibidas.org  adicionando-modelos-a-cena-virtual.org  compilando.org  divindingo-main-em-varios-modulos.org  gerenciadores-de-recursos-e-de-objetos.org  implementando-colisões.org  implementando-objetos.org  interfaces.org  mapa.org
docs/antigas/: adicionando-modelos-a-cena-virtual.org  estrutura-de-diretorios.org  implementando-colisões.org  implementando-objetos.org
docs/estudos/: 1-introdução-ao-opengl.org  modelos.txt
documentação/: Objects.cpp  Objects.h  implementando-objetos.org
documentação/estudos/: 1-introdução-ao-opengl.org
engine/include/: Bird.hpp  Camera.hpp  InputHandler.hpp  Letter.hpp  ObjectFactory.h  Objects.h  ResourceManager.hpp  Tree.hpp  UIRenderer.hpp  VirtualModel.h  dejavufont.h  matrices.h  textrendering.hpp
engine/include/Bezier/: BezierMover.hpp  BezierPath.hpp  PathFollower.hpp
engine/include/Bezier/Butterfly/: ButterflyDrawable.hpp  ButterflyNPC.hpp
engine/include/Bezier/Carp/: CarpDrawable.hpp  CarpNPC.hpp
engine/include/Bezier/Duck/: DuckDrawable.hpp  DuckNPC.hpp
engine/include/Collision/: AABBCollider.hpp  CapsuleCollider.hpp  Collider.hpp  CollisionSystem.hpp  CylindricalCollider.hpp  README.org  SphereCollider.hpp
engine/include/Game/: Application.hpp  AssetLoader.hpp  Bird.hpp  BirdDrawable.hpp  Camera.hpp  Renderer.hpp  Scene.hpp  SceneBuilder.hpp  Window.hpp
engine/include/Loaders/: ObjLoader.hpp  TextureLoader.hpp
engine/include/Objects/: Assets.hpp  Building.hpp  House.hpp  Letter.hpp  Mailbox.hpp  ObjDrawable.hpp  ProceduralRock.hpp  ProceduralTerrain.hpp  Ring.hpp  SineLayer.hpp  StaticObject.hpp  TerrainRegion.hpp  TerrainType.hpp  Tree.hpp
engine/include/Objects/Drawables/: HouseDrawable.hpp  LetterDrawable.hpp  RingDrawable.hpp  RockDrawable.hpp  TreeDrawable.hpp
engine/include/Objects/Interfaces/: Collidable.hpp  Drawable.hpp  GameObject.hpp
engine/include/Particles/: Colors.hpp  Particle.hpp  ParticleBurst.hpp  TrailEmitter.hpp
engine/include/Renderer/: ShaderLoader.hpp  Textures.hpp
engine/include/Terrain/: LakeLayer.hpp  MountainLayer.hpp  Skybox.hpp  Terrain.hpp  TerrainLayer.hpp  TerrainRegion.hpp
engine/include/Window/: InputCallbacks.hpp  WindowCallbacks.hpp
engine/include/audio/: AudioManager.hpp
engine/src/: Bird.cpp  Camera.cpp  InputHandler.cpp  Letter.cpp  ResourceManager.cpp  Tree.cpp  UIRenderer.cpp  buildtriangles.cpp  dejavufont.cpp  main.cpp  textrendering.cpp
engine/src/Bezier/: BezierMover.cpp  BezierPath.cpp
engine/src/Bezier/Butterfly/: ButterflyDrawable.cpp  ButterflyNPC.cpp
engine/src/Bezier/Carp/: CarpDrawable.cpp  CarpNPC.cpp
engine/src/Bezier/Duck/: DuckDrawable.cpp  DuckNPC.cpp
engine/src/Collision/: CollisionSystem.cpp  collisions.cpp
engine/src/Game/: Application.cpp  AssetLoader.cpp  Bird.cpp  Camera.cpp  Renderer.cpp  Scene.cpp  SceneBuilder.cpp  Window.cpp
engine/src/Loaders/: ObjLoader.cpp  TextureLoader.cpp
engine/src/Objects/: Assets.cpp  Building.cpp  House.cpp  Letter.cpp  Mailbox.cpp  ObjDrawable.cpp  ProceduralRock.cpp  ProceduralTerrain.cpp  Ring.cpp  StaticObject.cpp  Terrain.cpp  TerrainLayer.cpp  Tree.cpp
engine/src/Objects/Drawables/: BirdDrawable.cpp  HouseDrawable.cpp  LetterDrawable.cpp  RingDrawable.cpp  RockDrawable.cpp  TreeDrawable.cpp
engine/src/Particles/: ParticleBurst.cpp  TrailEmitter.cpp
engine/src/Renderer/: ShaderLoader.cpp  Textures.cpp
engine/src/Terrain/: LakeLayer.cpp  MountainLayer.cpp  SineLayer.cpp  Skybox.cpp  Terrain.cpp  TerrainLayer.cpp  TerrainRegion.cpp  TerrainType.cpp
engine/src/Window/: InputCallbacks.cpp  WindowCallbacks.cpp
engine/src/audio/: AudioManager.cpp  miniaudio.c
scripts/: rock_pos.py
src/: Objects.cpp  main.cpp
